# vutil

./: README.md  pyproject.toml
docs/: design.md  editing-design.md
src/vutil/: __init__.py  auto_compress.py  cli.py  editing.py  ffmpeg_builder.py  models.py  runner.py
