[project]
name = "vutil"
version = "0.1.0"
description = "Video compression CLI that maps high-level settings to ffmpeg."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
vutil = "vutil.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
